# geometry

./: .gitignore  README.md  pyproject.toml
geometry/: __init__.py  rectangle.py
tests/: test_rectangle.py
