[tool.poetry]
name = "geometry"
version = "0.1.0"
description = "Calcul du périmètre et de la surface d'un rectangle"
authors = ["Your Name <you@example.com>"]
license = "MIT"
repository = "https://github.com/de87684333/geometry"
packages = [{ include = "geometry" }]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.dev-dependencies]
pytest = "^7.4"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
